# CrowdReact

backend-rust/: Cargo.toml  README.md
backend-rust/config/: default.toml  development.toml  production.toml
backend-rust/migrations/: 000_create_migrations.sql  001_create_users.sql  002_create_bet_records.sql  003_create_buy_luck_number.sql  004_create_agents.sql  005_create_commissions.sql  006_create_platform_funds_flow.sql  007_create_platform_transaction_gas.sql  008_create_platform_prize_pool.sql  009_create_lottery_distribution_detail.sql  add_status_and_updated_at.rs  mod.rs
backend-rust/src/: main.rs
backend-rust/src/config/: config.rs  default.yaml  development.yaml  local.yaml  mod.rs  production.yaml  testing.yaml
backend-rust/src/entities/: bet_records.rs  mod.rs  users.rs
backend-rust/src/handlers/: bet_handler.rs  mod.rs  user_handler.rs
backend-rust/src/middleware/: ip_filter.rs  mod.rs  rate_limit.rs
backend-rust/src/models/: agent_model.rs  amount_model.rs  buy_luck_number_model.rs  commission_model.rs  lottery_distribution_detail_model.rs  mod.rs  platform_funds_flow_model.rs  platform_prize_pool_model.rs  platform_transaction_gas_model.rs  user_model.rs  user_token_model.rs  week_action_model.rs
backend-rust/src/routes/: bet_route.rs  mod.rs  user_route.rs
backend-rust/src/services/: agent_service.rs  amount_service.rs  auth_service.rs  buy_luck_number_service.rs  contract_service.rs  geoip_service.rs  health_check.rs  health_monitor.rs  lottery_service.rs  mod.rs  scheduler_service.rs  user_service.rs  web3_service.rs  week_action_service.rs
backend-rust/src/utils/: auth.rs  error.rs  mod.rs
backend-rust/test/ethereum/: contract_tests.rs  setup.rs
frontend-vue/: README.md  (+6 more)
(+56 files in other folders)
