[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = {version = "0.19.0" }
secp256k1 = { version = "0.20", features = ["rand", "global-context-less-secure"] }
actix-web = "4.9.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "mock", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sqlx = { version = "0.8.2", features = ["postgres"] }
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.214", features = ["derive"] }
config = "0.14.1"
chrono = "0.4.39"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.5.0" }
chrono-tz = "0.10.0"
argon2 = "0.5.3"
hex = "0.4.3"
jsonwebtoken = "9.1.1"
thiserror = "1.0"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"  # 如果需要使用 dec! 宏
time = "0.3.36"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1.40"
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"  # 如果需要 Prometheus 导出
deadpool = "0.12.1"
lazy_static = "1.5.0"
serde_json = "1.0.132"
actix-cors = "0.6.4"
ethers = { version = "2.0", features = ["legacy"] }
async-trait = "0.1.74"
dotenv = "0.15.0"
urlencoding = "2.1.3"
maxminddb = "0.24.0"
futures-util = "0.3.31"
num_cpus = "1.16.0"
futures = "0.3.31"

[dev-dependencies]
mockall = "0.13.0"
actix-web = { version = "4.9.0", features = ["http2", "actix-tls", "macros", "cookies"] }
serde_json = "1.0.132"